# sie-parser

./: .gitignore  CHANGELOG.md  LICENSE  README.md  coverage.xml  pyproject.toml  sie_cli.py  sie_parser.py
SIE4 spec/: Kontoplan-BAS-2025.csv  Kontoplan_K1_2018.csv  Kontoplan_K1_Mini_2018.csv  SIE_filformat_ver_4B_ENGLISH.txt
tests/: test_cli.py  test_sie4.se  test_sie_parser.py
